hphp/test/zend/bad/Zend/tests/try_finally_001.php
<?php
function foo ($a) {
   try {
     throw new Exception("ex");
   } finally {
     var_dump($a);
   }
}

foo("finally");
?>
